# FirabasePostMCP

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: claude_desktop_config.json  hermes_config.yaml
src/postmcp/: __main__.py  config.py  server.py  types.py
src/postmcp/prompts/: posts.py
src/postmcp/resources/: posts.py
src/postmcp/services/: firebase.py  posts.py
src/postmcp/tools/: posts.py
src/postmcp/utils/: logger.py
tests/: conftest.py  test_server.py
tests/tools/: test_posts.py
