[project]
name = "postmcp"
version = "0.1.0"
description = "MCP server for posting and fetching AI-generated social news posts via Firebase"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "firebase-admin>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[project.scripts]
postmcp = "postmcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
